--- a/index.html
+++ b/index.html
@@ -195,15 +195,51 @@
         <div class="row media">
         	<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
             	<div class="expertise">
-                	July,2022<br> January 2023
+                	Aug,2023<br> Present
                 </div>
             </div>
         	<div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
-            	<h4>Sutherland Davao</h4>
-                <h5>Call Center Agent (Gaming Account)</h5>
-                <p>Working as Call center Agent for 6 months under of gaming account..</p>
+            	<h4>Jakebrake Logistics</h4>
+                <h5>Software Developer/ Web Developer</h5>
+                <p>Working as Full Stacks Developer</p>
+            </Div>
+        </div>
+        <div class="row media">
+        	<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+            	<div class="expertise">
+                	May,2023<br> Present
+                </div>
+            </div>
+        	<div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
+            	<h4>Farley Enterprise</h4>
+                <h5>Web Developer / Backend developer</h5>
+                <p>Working as Full Stacks Backend Wordpress Developer</p>
             </div>
         </div>
+        <div class="row media">
+        	<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+            	<div class="expertise">
+                	May,2023<br> Present
+                </div>
+            </div>
+        	<div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
+            	<h4>Private MERN Stack Tutor</h4>
+                <h5>Mern Stack Tutor</h5>
+                <p>Working as Personal Tutor for MERN Stack</p>
+            </div>
+        </div>		
+        <div class="row media">
+        	<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+            	<div class="expertise">
+                	May,2023<br> Present
+                </div>
+            </div>
+        	<div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
+            	<h4>Freelance FullStack Web App/ Software App Developer</h4>
+                <h5>Freelancer</h5>
+                <p>Working as Freelance Full Stack Developer</p>
+            </div>
+        </div>		
         <div class="row media">
         	<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
             	<div class="expertise">
