--- a/index.html
+++ b/index.html
@@ -178,6 +178,26 @@
                     <div class="skillbar-bar"></div>
                     <div class="skill-bar-percent"></div>
                 </div> <!-- End Skill Bar -->                
+                <div class="skillbar clearfix " data-percent="99%">
+                    <div class="skillbar-title"><span>Python</span></div>
+                    <div class="skillbar-bar"></div>
+                    <div class="skill-bar-percent"></div>
+                </div> <!-- End Skill Bar -->                
+                <div class="skillbar clearfix " data-percent="91%">
+                    <div class="skillbar-title"><span>Google Cloud</span></div>
+                    <div class="skillbar-bar"></div>
+                    <div class="skill-bar-percent"></div>
+                </div> <!-- End Skill Bar -->                
+                <div class="skillbar clearfix " data-percent="91%">
+                    <div class="skillbar-title"><span>Node Js</span></div>
+                    <div class="skillbar-bar"></div>
+                    <div class="skill-bar-percent"></div>
+                </div> <!-- End Skill Bar -->                
+                <div class="skillbar clearfix " data-percent="97%">
+                    <div class="skillbar-title"><span>Word Press</span></div>
+                    <div class="skillbar-bar"></div>
+                    <div class="skill-bar-percent"></div>
+                </div> <!-- End Skill Bar -->                
                 </div>
             </div>
         </div>
