--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h4>Full Stack Web Developer from Philippines</h4>
             <p> I am a passionate web developer with a lot of experience in creating websites and web applications. I specialize in (Front-End To Back-End), and I am always looking to learn and grow my skills.
 
-              My expertise includes front-end development with HTML, CSS, and JavaScript, as well as back-end development with [PHP,Jquery,Laravel and MySql]. I am proficient in creating responsive and mobile-friendly websites that are optimized for search engines and provide an excellent user experience.
+              My expertise includes front-end development with HTML, CSS, and JavaScript, as well as back-end development with Python, NodeJs, PHP,Jquery,Laravel and MySql. I am proficient in creating responsive and mobile-friendly websites that are optimized for search engines and provide an excellent user experience.
               
               I am willing to work on e-commerce platforms and integrating third-party APIs to provide additional functionality. I am a detail-oriented developer who takes pride in delivering high-quality work on time and within budget.
               
